// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmailCard component tests matches SnapShot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <EmailCard
    action={Object {}}
    user={Object {}}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h3 />,
        <p
          className="action-description"
/>,
        null,
        null,
        null,
        <div
          className="button-holder"
>
          <a
                    href={null}
          >
                    <button
                              onClick={[Function]}
                    >
                              EMAIL
                              <i
                                        className="icon-mail"
                              />
                    </button>
          </a>
</div>,
      ],
      "className": "ActionCard email-card",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": "h3",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": undefined,
          "className": "action-description",
        },
        "ref": null,
        "rendered": null,
        "type": "p",
      },
      null,
      null,
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <a
              href={null}
>
              <button
                            onClick={[Function]}
              >
                            EMAIL
                            <i
                                          className="icon-mail"
                            />
              </button>
</a>,
            null,
          ],
          "className": "button-holder",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <button
                onClick={[Function]}
>
                EMAIL
                <i
                                className="icon-mail"
                />
</button>,
              "href": null,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "EMAIL",
                  <i
                    className="icon-mail"
/>,
                ],
                "onClick": [Function],
              },
              "ref": null,
              "rendered": Array [
                "EMAIL",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "icon-mail",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "i",
                },
              ],
              "type": "button",
            },
            "type": "a",
          },
          null,
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h3 />,
          <p
            className="action-description"
/>,
          null,
          null,
          null,
          <div
            className="button-holder"
>
            <a
                        href={null}
            >
                        <button
                                    onClick={[Function]}
                        >
                                    EMAIL
                                    <i
                                                className="icon-mail"
                                    />
                        </button>
            </a>
</div>,
        ],
        "className": "ActionCard email-card",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": "h3",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": undefined,
            "className": "action-description",
          },
          "ref": null,
          "rendered": null,
          "type": "p",
        },
        null,
        null,
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <a
                href={null}
>
                <button
                                onClick={[Function]}
                >
                                EMAIL
                                <i
                                                className="icon-mail"
                                />
                </button>
</a>,
              null,
            ],
            "className": "button-holder",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <button
                  onClick={[Function]}
>
                  EMAIL
                  <i
                                    className="icon-mail"
                  />
</button>,
                "href": null,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "EMAIL",
                    <i
                      className="icon-mail"
/>,
                  ],
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": Array [
                  "EMAIL",
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "icon-mail",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "i",
                  },
                ],
                "type": "button",
              },
              "type": "a",
            },
            null,
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`FacebookCard component tests matches SnapShot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <FacebookCard
    action={Object {}}
    user={Object {}}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h3 />,
        <p
          className="action-description"
/>,
        null,
        <div
          className="button-holder"
>
          <a
                    href={null}
                    target="_blank"
          >
                    <button
                              onClick={[Function]}
                    >
                              FACEBOOK
                              <i
                                        className="icon-facebook"
                              />
                    </button>
          </a>
</div>,
      ],
      "className": "ActionCard facebook-card",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": "h3",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": undefined,
          "className": "action-description",
        },
        "ref": null,
        "rendered": null,
        "type": "p",
      },
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <a
              href={null}
              target="_blank"
>
              <button
                            onClick={[Function]}
              >
                            FACEBOOK
                            <i
                                          className="icon-facebook"
                            />
              </button>
</a>,
            null,
          ],
          "className": "button-holder",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <button
                onClick={[Function]}
>
                FACEBOOK
                <i
                                className="icon-facebook"
                />
</button>,
              "href": null,
              "target": "_blank",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "FACEBOOK",
                  <i
                    className="icon-facebook"
/>,
                ],
                "onClick": [Function],
              },
              "ref": null,
              "rendered": Array [
                "FACEBOOK",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "icon-facebook",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "i",
                },
              ],
              "type": "button",
            },
            "type": "a",
          },
          null,
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h3 />,
          <p
            className="action-description"
/>,
          null,
          <div
            className="button-holder"
>
            <a
                        href={null}
                        target="_blank"
            >
                        <button
                                    onClick={[Function]}
                        >
                                    FACEBOOK
                                    <i
                                                className="icon-facebook"
                                    />
                        </button>
            </a>
</div>,
        ],
        "className": "ActionCard facebook-card",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": "h3",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": undefined,
            "className": "action-description",
          },
          "ref": null,
          "rendered": null,
          "type": "p",
        },
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <a
                href={null}
                target="_blank"
>
                <button
                                onClick={[Function]}
                >
                                FACEBOOK
                                <i
                                                className="icon-facebook"
                                />
                </button>
</a>,
              null,
            ],
            "className": "button-holder",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <button
                  onClick={[Function]}
>
                  FACEBOOK
                  <i
                                    className="icon-facebook"
                  />
</button>,
                "href": null,
                "target": "_blank",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "FACEBOOK",
                    <i
                      className="icon-facebook"
/>,
                  ],
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": Array [
                  "FACEBOOK",
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "icon-facebook",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "i",
                  },
                ],
                "type": "button",
              },
              "type": "a",
            },
            null,
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`PhoneCard component tests matches SnapShot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PhoneCard
    action={Object {}}
    user={Object {}}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h3 />,
        <p
          className="action-description"
/>,
        null,
        null,
        null,
        <div
          className="button-holder"
>
          <button
                    onClick={[Function]}
          >
                    CALL
                    <i
                              className="icon-phone"
                    />
          </button>
</div>,
      ],
      "className": "ActionCard phone-card",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": "h3",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": undefined,
          "className": "action-description",
        },
        "ref": null,
        "rendered": null,
        "type": "p",
      },
      null,
      null,
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <button
              onClick={[Function]}
>
              CALL
              <i
                            className="icon-phone"
              />
</button>,
            null,
          ],
          "className": "button-holder",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "CALL",
                <i
                  className="icon-phone"
/>,
              ],
              "onClick": [Function],
            },
            "ref": null,
            "rendered": Array [
              "CALL",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "icon-phone",
                },
                "ref": null,
                "rendered": null,
                "type": "i",
              },
            ],
            "type": "button",
          },
          null,
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h3 />,
          <p
            className="action-description"
/>,
          null,
          null,
          null,
          <div
            className="button-holder"
>
            <button
                        onClick={[Function]}
            >
                        CALL
                        <i
                                    className="icon-phone"
                        />
            </button>
</div>,
        ],
        "className": "ActionCard phone-card",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": "h3",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": undefined,
            "className": "action-description",
          },
          "ref": null,
          "rendered": null,
          "type": "p",
        },
        null,
        null,
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <button
                onClick={[Function]}
>
                CALL
                <i
                                className="icon-phone"
                />
</button>,
              null,
            ],
            "className": "button-holder",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "CALL",
                  <i
                    className="icon-phone"
/>,
                ],
                "onClick": [Function],
              },
              "ref": null,
              "rendered": Array [
                "CALL",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "icon-phone",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "i",
                },
              ],
              "type": "button",
            },
            null,
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`TwitterCard component tests matches SnapShot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TwitterCard
    action={Object {}}
    user={Object {}}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h3 />,
        <p
          className="action-description"
/>,
        null,
        <div
          className="button-holder"
>
          <a
                    href={null}
                    target="_blank"
          >
                    <button
                              onClick={[Function]}
                    >
                              TWEET
                              <i
                                        className="icon-twitter"
                              />
                    </button>
          </a>
</div>,
      ],
      "className": "ActionCard twitter-card",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": "h3",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": undefined,
          "className": "action-description",
        },
        "ref": null,
        "rendered": null,
        "type": "p",
      },
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <a
              href={null}
              target="_blank"
>
              <button
                            onClick={[Function]}
              >
                            TWEET
                            <i
                                          className="icon-twitter"
                            />
              </button>
</a>,
            null,
          ],
          "className": "button-holder",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <button
                onClick={[Function]}
>
                TWEET
                <i
                                className="icon-twitter"
                />
</button>,
              "href": null,
              "target": "_blank",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "TWEET",
                  <i
                    className="icon-twitter"
/>,
                ],
                "onClick": [Function],
              },
              "ref": null,
              "rendered": Array [
                "TWEET",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "icon-twitter",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "i",
                },
              ],
              "type": "button",
            },
            "type": "a",
          },
          null,
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h3 />,
          <p
            className="action-description"
/>,
          null,
          <div
            className="button-holder"
>
            <a
                        href={null}
                        target="_blank"
            >
                        <button
                                    onClick={[Function]}
                        >
                                    TWEET
                                    <i
                                                className="icon-twitter"
                                    />
                        </button>
            </a>
</div>,
        ],
        "className": "ActionCard twitter-card",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": "h3",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": undefined,
            "className": "action-description",
          },
          "ref": null,
          "rendered": null,
          "type": "p",
        },
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <a
                href={null}
                target="_blank"
>
                <button
                                onClick={[Function]}
                >
                                TWEET
                                <i
                                                className="icon-twitter"
                                />
                </button>
</a>,
              null,
            ],
            "className": "button-holder",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <button
                  onClick={[Function]}
>
                  TWEET
                  <i
                                    className="icon-twitter"
                  />
</button>,
                "href": null,
                "target": "_blank",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "TWEET",
                    <i
                      className="icon-twitter"
/>,
                  ],
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": Array [
                  "TWEET",
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "icon-twitter",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "i",
                  },
                ],
                "type": "button",
              },
              "type": "a",
            },
            null,
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
